# cGTFS

./: .gitmodules  CMakeLists.txt  CREDITS  README.MD
.github/workflows/: cmake-single-platform.yml  cmake.yml
data/providers/vicroads/: endpoints.yaml
ext/: CMakeLists.txt
include/: debug.h  gtfs.h  ui.h
src/: debug.c  main.c
src/gtfs/: gtfs.c  shape.c  stops.c
src/ui/: ui.c  ui_log.c
src/util/: util.c
